--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feathers-elasticsearch",
-  "description": "Elasticsearch adapter for FeathersJs",
+  "description": "Elasticsearch adapter for FeathersJS with aggregations",
   "version": "1.0.0",
   "homepage": "https://github.com/feathersjs-ecosystem/feathers-elasticsearch",
   "main": "lib/",
